# competition_IA

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Empires_in_the_Fog_Spec_v1.3.md  Empires_in_the_Fog_Spec_v1.4.md  LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/plans/: implementation_plan.md
empires_in_the_fog/: __init__.py  cli.py  config.py  models.py  server.py  tools.py  viewer.py
empires_in_the_fog/rules/: game_rules.md
