[project]
name = "empires-in-the-fog"
version = "1.4.0"
description = "AI competition platform: territorial strategy with fog of war and semantic diplomacy via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Empires in the Fog Contributors"}
]
keywords = ["mcp", "ai", "game", "strategy", "competition", "llm", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Strategy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.20",
]

[project.optional-dependencies]
embeddings = ["scikit-learn>=1.3"]
embeddings-full = ["sentence-transformers>=2.2.0", "torch>=2.0"]
viewer = []
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
eitf-server = "empires_in_the_fog.server:main"
eitf-cli = "empires_in_the_fog.cli:main"
eitf-viewer = "empires_in_the_fog.viewer:main"

[project.urls]
Homepage = "https://github.com/your-org/empires-in-the-fog"
Documentation = "https://github.com/your-org/empires-in-the-fog#readme"
Source = "https://github.com/your-org/empires-in-the-fog"
Changelog = "https://github.com/your-org/empires-in-the-fog/blob/main/CHANGELOG.md"
Issues = "https://github.com/your-org/empires-in-the-fog/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["empires_in_the_fog*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I001"]
